fix: Changed the system theme